[workspace]
members = [
    "tokenscout",

    "database",

    "common/logger",
    "common/jemalloc_utils",
    "common/task_executor",
    "common/tokenscout_metrics",

    "analyzer",
    "analyzer/security",

    "telegram-bot",

    "ranker",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
clap = "4.5.7"
lazy_static = "1.4.0"
teloxide = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["ws"] }
dotenv = "0.15.0"

# Local dependencies
database = { path = "database" }
analyzer = { path = "analyzer" }
telegram_bot = { path = "telegram-bot" }
ranker = { path = "ranker" }
