[workspace]
members = [
    "analyzer",
    "analyzer/security",

    "common/logging",
    "common/jemalloc_utils",
    "common/task_executor",
    "common/tokenscout_metrics",
    "common/tokenscout_version",

    "database",

    "ranker",

    "tokenscout",
    "telegram-bot",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
clap = "4.5.7"
lazy_static = "1.4.0"
teloxide = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["ws"] }
dotenv = "0.15.0"
async-trait = "0.1.80"
chrono = "0.4.38"
git-version = "0.3.9"
target_info = "0.1.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
eyre = "0.6.12"

# Local dependencies
database = { path = "database" }
analyzer = { path = "analyzer" }
telegram-bot = { path = "telegram-bot" }
ranker = { path = "ranker" }
tokenscout_version = { path = "common/tokenscout_version" }
logging = { path = "common/logging" }
jemalloc_utils = { path = "common/jemalloc_utils" }
task_executor = { path = "common/task_executor" }
tokenscout_metrics = { path = "common/tokenscout_metrics" }
