[package]
name = "tokenscout"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
clap = { workspace = true }
database = { workspace = true }
analyzer = { workspace = true }
telegram-bot = { workspace = true }
ranker = { workspace = true }
tokenscout_version = { workspace = true }
async-trait = { workspace = true }
