[package]
name = "task_executor"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
lazy_static.workspace = true
prometheus.workspace = true
tokenscout_metrics.workspace = true
eyre.workspace = true
futures.workspace = true
async-channel.workspace = true
tracing.workspace = true
